# Microservices-with-AWS-and-FastAPI

./: .gitignore  Makefile  README.md  cli-fire.py  main.py  pyproject.toml  requirements.txt
.github/workflows/: devops.yml
mylib/: logic.py
