[tool.poetry]
name = "microservices-with-aws-and-fastapi"
version = "0.1.0"
description = ""
authors = ["Subrata Mondal <subratasubha2@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.0"
uvicorn = "^0.27.0.post1"
pydantic = "^2.6.0"
httpie = "^3.2.2"
black = "^24.1.1"
wikipedia = "^1.4.0"
pytest = "^8.0.0"
pytest-cov = "^4.1.0"
pylint = "^3.0.3"
fire = "^0.5.0"
textblob = "^0.17.1"
ipython = "^8.21.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
